--- a/home.html
+++ b/home.html
@@ -6,6 +6,28 @@
     <title>TP1-Desarrollo</title>
 </head>
 <body>
-    
+    <div>    
+        <div>  
+            <h1> Hola world </h1>
+            <h2> Hola world </h2>
+            <h3> Hola world </h3>
+            <h4> Hola world </h4>
+            <h5> Hola world </h5>
+            <h6> Hola world </h6>
+        </div>
+
+        <div> 
+            <h3> La batalla de Midway (en inglés) </h3>
+            <p>The <b>Battle of Midway</b> 
+                was a major naval battle in the <b>Pacific Theater</b>
+                of <a href="/wiki/World_War_II" title="World War II">World War II</a> 
+                that took place 4–7 June 1942, <b><em>six months after Japan's attack on Pearl Harbor</em></b> and one month after the Battle of the Coral Sea.
+
+            </p>
+        </div>
+    </div>
+
+
+
 </body>
 </html>
