--- a/home.html
+++ b/home.html
@@ -72,34 +72,34 @@
         }
         </style>
     </div>
+
 <section id="1.0">
     <div>    <!-- 4.2 Encabezados y Propiedades del Texto -->
-
-        <div>  
-            <h1> Hola world </h1>
-            <h2> Hola world </h2>
-            <h3> Hola world </h3>
-            <h4> Hola world </h4>
-            <h5> Hola world </h5>
-            <h6> Hola world </h6>
-        </div>
+        <header>
+            <div>  
+                <h1> Hola world </h1>
+                <h2> Hola world </h2>
+                <h3> Hola world </h3>
+                <h4> Hola world </h4>
+                <h5> Hola world </h5>
+                <h6> Hola world </h6>
+            </div>
+        </header>
         <section id="1.1">
-            <div> 
+            <article> 
                 <h3> La batalla de Midway (en inglés) </h3>
-                
                 <p>The <b>Battle of Midway</b> 
                     was a major naval battle in the <b>Pacific Theater</b>
                     of <a href="/wiki/World_War_II" title="World War II">World War II</a> 
                     that took place 4–7 June 1942, <b><em>six months after Japan's attack on Pearl Harbor</em></b> and one month after the Battle of the Coral Sea.
     
                 </p>
-            </div>
+            </article>
         </section>
- 
     </div>
 </section>
 
-    <div> <!-- Enlaces y Listas -->
+    <nav> <!-- Enlaces y Listas -->
         <span> <h2> Listas </h2> </span>
         <div>
             <b> Lista desordenada:</b>
@@ -133,7 +133,7 @@
             </section>
         </nav> 
         </div>
-    </div>
+    </nav>
 
     <!-- Media -->
     <section id="Media"> 
