--- a/home.html
+++ b/home.html
@@ -70,6 +70,35 @@
         input[type="submit"]:hover {
             background-color: #45a0499f;
         }
+        header {
+        background-color: #3333338c;
+        color: white;
+        padding: 20px 0;
+        text-align: center;
+        font-size: 24px;
+        font-weight: bold;
+    }
+
+    
+    footer {
+        background-color: #33333388;
+        color: white;
+        padding: 10px 0;
+        text-align: center;
+        font-size: 16px;
+        position: fixed;
+        width: 100%;
+        bottom: 0;
+        left: 0;
+    }
+
+    main {
+        padding: 20px;
+        margin-top: 20px;
+        background-color: #f4f4f4;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+    }
         </style>
     </div>
 
@@ -85,6 +114,7 @@
                 <h6> Hola world </h6>
             </div>
         </header>
+<main>
         <section id="1.1">
             <article> 
                 <h3> La batalla de Midway (en inglés) </h3>
@@ -226,6 +256,7 @@
             </form>
         </div>
     </section>
+</main>
     <footer>
         <p>©AB</p>
     </footer>
